--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -130,6 +130,13 @@
                 <version>3.1.1</version>
             </plugin>
 
+            <!-- Link to source files -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.3</version>
+            </plugin>
+
             <!-- Running tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
