--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -93,6 +93,15 @@
             <artifactId>batik-svg-dom</artifactId>
             <version>1.13</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>2.0.2-beta</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
