--- a/globingular/aggregator/pom.xml
+++ b/globingular/aggregator/pom.xml
@@ -8,6 +8,7 @@
     </parent>
 
     <artifactId>aggregator</artifactId>
+    <packaging>pom</packaging>
     <dependencies>
         <dependency>
             <groupId>it1901.gr2002.globingular</groupId>
