--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -123,7 +123,17 @@
                 <artifactId>batik-svg-dom</artifactId>
                 <version>1.13</version>
             </dependency>
+
+            <!-- Mockito for test -->
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>2.0.2-beta</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
+
     </dependencyManagement>
 
     <build>
