--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -78,12 +78,17 @@
             </dependency>
             <dependency>
                 <groupId>org.openjfx</groupId>
-                <artifactId>javafx-swing</artifactId>
+                <artifactId>javafx-base</artifactId>
                 <version>14.0.1</version>
             </dependency>
             <dependency>
                 <groupId>org.openjfx</groupId>
-                <artifactId>javafx-base</artifactId>
+                <artifactId>javafx-graphics</artifactId>
+                <version>14.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-web</artifactId>
                 <version>14.0.1</version>
             </dependency>
 
@@ -105,23 +110,6 @@
                 <artifactId>openjfx-monocle</artifactId>
                 <version>jdk-12.0.1+2</version>
                 <scope>test</scope>
-            </dependency>
-
-            <!-- Apache batik -->
-            <dependency>
-                <groupId>org.apache.xmlgraphics</groupId>
-                <artifactId>batik-transcoder</artifactId>
-                <version>1.13</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.xmlgraphics</groupId>
-                <artifactId>batik-swing</artifactId>
-                <version>1.13</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.xmlgraphics</groupId>
-                <artifactId>batik-svg-dom</artifactId>
-                <version>1.13</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -264,13 +252,6 @@
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-maven-plugin</artifactId>
                     <version>0.0.4</version>
-                </plugin>
-
-                <!-- Removing old Java services from dependencies -->
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>truezip-maven-plugin</artifactId>
-                    <version>1.2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
