--- a/globingular/ui/pom.xml
+++ b/globingular/ui/pom.xml
@@ -29,11 +29,15 @@
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-swing</artifactId>
+            <artifactId>javafx-base</artifactId>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-base</artifactId>
+            <artifactId>javafx-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
         </dependency>
 
         <!-- Test with JUnit5 -->
@@ -58,20 +62,6 @@
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>openjfx-monocle</artifactId>
-        </dependency>
-
-        <!-- Apache batik -->
-        <dependency>
-            <groupId>org.apache.xmlgraphics</groupId>
-            <artifactId>batik-transcoder</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.xmlgraphics</groupId>
-            <artifactId>batik-swing</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.xmlgraphics</groupId>
-            <artifactId>batik-svg-dom</artifactId>
         </dependency>
     </dependencies>
 
@@ -104,44 +94,6 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-            </plugin>
-
-            <!-- Removing old Java services from dependencies -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>truezip-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>fix-batik-script</id>
-                        <goals>
-                            <goal>remove</goal>
-                        </goals>
-                        <phase>process-resources</phase>
-                        <configuration>
-                            <fileset>
-                                <directory>${settings.localRepository}/org/apache/xmlgraphics/batik-script/1.13/batik-script-1.13.jar/META-INF/services</directory>
-                                <includes>
-                                    <include>org.apache.batik.script.InterpreterFactory</include>
-                                </includes>
-                            </fileset>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>fix-xalan</id>
-                        <goals>
-                            <goal>remove</goal>
-                        </goals>
-                        <phase>process-resources</phase>
-                        <configuration>
-                            <fileset>
-                                <directory>${settings.localRepository}/xalan/xalan/2.7.2/xalan-2.7.2.jar/META-INF/services</directory>
-                                <includes>
-                                    <include>org.apache.xalan.extensions.bsf.BSFManager</include>
-                                </includes>
-                            </fileset>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
 
             <!-- Using latest maven-site-plugin for report generation -->
