--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -10,6 +10,7 @@
         <module>persistence</module>
         <module>core</module>
         <module>aggregator</module>
+        <module>restserver</module>
     </modules>
 
     <properties>
